--- a/templates/basic_page.html
+++ b/templates/basic_page.html
@@ -32,10 +32,15 @@
 				<li><a href="{% url 'home' %}"  onclick="action()">Home</a></li>
 				<li><a href="about-me.html">About Us</a></li>			
 				<li><a href="achievements.html">Support</a></li>
-				<li><a href="hire-me.html">Profile</a></li>
-				<li><a href="{% url 'signup' %}" class = "click">Register</a></li>
-				<li><a href="{% url 'login' %}" class="click">Log in</a></li>
-				<li><a href="{% url 'employer' %}" class="click">Employer Site</a></li>
+				{% if cond %}
+					<li><a href="#">{{ fullname }}</a></li>
+					<li><a href="{% url 'login' %}" class="click">Log out</a></li>
+				{% else %}
+					<li><a href="hire-me.html">Profile</a></li>
+					<li><a href="{% url 'signup' %}" class = "click">Register</a></li>
+					<li><a href="{% url 'login' %}" class="click">Log in</a></li>
+					<li><a href="{% url 'employer' %}" class="click">Employer Site</a></li>
+				{% endif %}
 		</ul>
 	</nav>
 	<div class="clear"></div>
