--- a/static/css/style.css
+++ b/static/css/style.css
@@ -493,7 +493,7 @@ p{
 }
 
 .butt {
-	position: absolute;
+	/* position: absolute; */
 	background-color: #ff2603;
     padding: 10px;
 	margin-top: 14px;
