--- a/templates/log_in_employer.html
+++ b/templates/log_in_employer.html
@@ -44,19 +44,19 @@
 
             <!-- Main Project -->
             <div class="project_thumb_wrapper">
-                <p> Eligible candidate are refine and recommend you.</p>
+                <p> Vacancies are recommend to the user if matched.</p>
             </div>
             <!-- Main Project ends -->
 
             <!-- Main Project -->
             <div class="project_thumb_wrapper">
-                <p> short description</p>
+                <p> User can able to give review about their company.</p>
             </div>
             <!-- Main Project ends -->
 
             <!-- Main Project -->
             <div class="project_thumb_wrapper">
-                <p> short description</p>
+                <p> Other features are coming soon.</p>
             </div>
             <!-- Main Project ends -->
         </div>
