--- a/templates/basic_page.html
+++ b/templates/basic_page.html
@@ -39,8 +39,8 @@
 
 				{% else %}
 					<li><a href="{% url 'home' %}"  onclick="action()">Home</a></li>
-					<li><a href="about-me.html">About Us</a></li>			
-					<li><a href="achievements.html">Support</a></li>
+					<li><a href="#">About Us</a></li>			
+					<li><a href="#">Support</a></li>
 					<li><a href="{% url 'all_company_reviews' %}">Company Review</a></li>
 					<li><a href="{% url 'signup' %}" class = "click">Register</a></li>
 					<li><a href="{% url 'login' %}" class="click">Log in</a></li>
@@ -60,20 +60,17 @@
 	<div class="important_links_wrapper">
 		<h4 class="footer_link_header">Important Links</h4>
 		<ul class="links">
-			<li><a href="my-projects.html">Our Projects</a></li>
-			<li><a href="client-reviews.html">Client Reviews</a></li>
-			<!-- <li><a href="usage-terms.html">Usage Terms</a></li>
-			<li><a href="source-code.html">Source Code Rights</a></li> -->
-			<li><a href="my-skills.html">Our partners</a></li>
-			<li><a href="blogs.html">Blogs</a></li>
+			<li><a href="#">Our Projects</a></li>
+			<li><a href="#">Our partners</a></li>
+			<li><a href="#">Blogs</a></li>
 		</ul>
 	</div>
 
 	<div class="important_links_wrapper">
 		<h4 class="footer_link_header">More Links</h4>
 		<ul class="links">
-			<li><a href="agreement.html">Non-Disclosure Agreement</a></li>
-			<li><a href="payments.html">Payments And Agreements</a></li>
+			<li><a href="#">Non-Disclosure Agreement</a></li>
+			<li><a href="#">Payments And Agreements</a></li>
 			
 		</ul>
 	</div>
